--- a/index.html
+++ b/index.html
@@ -4,7 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FlowerShop</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Lato:wght@400;700;900&family=Open+Sans:wght@400;700;800&family=Work+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="styles.css/flower.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header section -->
+
+    <header>
+      <section class="header-main">
+        <div class="header-section">
+          <h1 class="header-title">
+            Let's make beautiful flowers a part of your life.
+          </h1>
+          <p class="header-description">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using Lorem Ipsum is that it has a more-or-less normal
+            distribution of letters.
+          </p>
+          <button class="btn-primary">Shop Now</button>
+        </div>
+        <div class="header-picture">
+          <img src="./Flower Asset/pngwing 10.png" alt="" />
+        </div>
+      </section>
+    </header>
+  </body>
 </html>
