created main section

--- a/index.html
+++ b/index.html
@@ -36,5 +36,18 @@
         </div>
       </section>
     </header>
+    <main>
+      <section>
+        <div class="main-section">
+          <div class="main-section-featured">
+            <h3 class="main-section-title">Our Featured Flowers</h3>
+            <p class="main-section-description">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
