added content in main featured flower section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
             </p>
           </div>
         </div>
+        <div class="featured-flowers">
+          <div class="flower-tulip">
+            <img src="./Flower Asset/pngwing 6.png" alt="" />
+            <p><a href="">Pink Flower Tree</a></p>
+          </div>
+          <div class="flower-daisy">
+            <img src="./Flower Asset/pngwing 5.png" alt="" />
+            <p><a href="">Pink Flower Tree</a></p>
+          </div>
+          <div class="flower-yellow">
+            <img src="./Flower Asset/pngwing 7.png" alt="" />
+            <p><a href="">Pink Flower Tree</a></p>
+          </div>
+        </div>
       </section>
     </main>
   </body>
