marging and positing the images

--- a/index.html
+++ b/index.html
@@ -49,16 +49,22 @@
         </div>
         <div class="featured-flowers">
           <div class="flower-tulip">
-            <img src="./Flower Asset/pngwing 6.png" alt="" />
-            <p><a href="">Pink Flower Tree</a></p>
+            <div class="flower-tulip-description">
+              <img src="./Flower Asset/pngwing 6.png" alt="" />
+              <p class="tulip"><a href="">Pink Flower Tree</a></p>
+            </div>
           </div>
           <div class="flower-daisy">
-            <img src="./Flower Asset/pngwing 5.png" alt="" />
-            <p><a href="">Pink Flower Tree</a></p>
+            <div class="flower-daisy-description">
+              <img src="./Flower Asset/pngwing 5.png" alt="" />
+              <p class="daisy"><a href="">Pink Flower Tree</a></p>
+            </div>
           </div>
           <div class="flower-yellow">
-            <img src="./Flower Asset/pngwing 7.png" alt="" />
-            <p><a href="">Pink Flower Tree</a></p>
+            <div class="flower-yellow-description">
+              <img src="./Flower Asset/pngwing 7.png" alt="" />
+              <p class="yellow-tulip"><a href="">Pink Flower Tree</a></p>
+            </div>
           </div>
         </div>
       </section>
