created hot deals container

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         </div>
       </section>
     </header>
+
+    <!-- main section -->
+
     <main>
       <section>
         <div class="main-section">
@@ -67,6 +70,11 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <!-- service section -->
+
+      <section>
         <div class="services">
           <div class="delibery-boy">
             <img src="./Flower Asset/Group 57.png" alt="" />
@@ -80,6 +88,22 @@
             <img src="./Flower Asset/Group 59.png" alt="" />
             <p>24/7 Free Support.</p>
           </div>
+        </div>
+      </section>
+
+      <!-- hot deals section -->
+
+      <section class="hot-deals-container">
+        <div class="hot-deals">
+          <h2 class="deals-title">Hot Deal ! Sale Up To 25% Off</h2>
+          <p class="deals-description">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+          <button class="btn-primary">Sign Up</button>
+        </div>
+        <div class="deals-image">
+          <img src="./Flower Asset/pngwing 8.png" alt="" />
         </div>
       </section>
     </main>
