added hot deals section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
 
       <section class="hot-deals-container">
         <div class="hot-deals">
-          <h2 class="deals-title">Hot Deal ! Sale Up To 25% Off</h2>
+          <h2 class="deals-title">
+            Hot Deal ! Sale Up To 25% <span class="deals-title-red">Off</span>
+          </h2>
           <p class="deals-description">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
