added new bonus section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,26 @@
           <img src="./Flower Asset/pngwing 8.png" alt="" />
         </div>
       </section>
+
+      <!-- new arrival bonus section -->
+
+      <section class="new-arrival-container">
+        <div class="new-arrival">
+          <h2 class="new-arrival-title">
+            <span class="yellow-lily">New Arrivals</span> <br />
+            Flower Yellow Lily
+          </h2>
+          <p class="new-arrival-description">
+            Introducing our exquisite new arrivals: the vibrant and captivating
+            Yellow Lily! Delicate and radiant, these stunning blooms will add a
+            touch of elegance to any occasion.
+          </p>
+          <button class="btn-primary">See More</button>
+        </div>
+        <div class="new=image">
+          <img src="./Flower Asset/pngwing 11.png" alt="" />
+        </div>
+      </section>
     </main>
   </body>
 </html>
