social banner created and added

--- a/index.html
+++ b/index.html
@@ -124,8 +124,34 @@
           </p>
           <button class="btn-primary">See More</button>
         </div>
-        <div class="new=image">
+        <div class="new-image">
           <img src="./Flower Asset/pngwing 11.png" alt="" />
+        </div>
+      </section>
+
+      <!-- social banner section -->
+
+      <section>
+        <div class="social-banner-header">
+          <h2 class="social-banner-title">Instagram</h2>
+          <p class="social-banner-description">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+        </div>
+        <div class="social-banner-images">
+          <div class="banner-images">
+            <img src="./Flower Asset/Flower 01.png" alt="" />
+          </div>
+          <div class="banner-images">
+            <img src="./Flower Asset/Rectangle 4.png" alt="" />
+          </div>
+          <div class="banner-images">
+            <img src="./Flower Asset/Rectangle 5.png" alt="" />
+          </div>
+          <div class="banner-images">
+            <img src="./Flower Asset/Rectangle 6.png" alt="" />
+          </div>
         </div>
       </section>
     </main>
