subscribe section created and added

--- a/index.html
+++ b/index.html
@@ -154,6 +154,19 @@
           </div>
         </div>
       </section>
+
+      <!-- subscribe section -->
+
+      <section class="subscribe-container">
+        <div class="subscribe-section">
+          <h2 class="subscribe-title">Get The Latest Deals</h2>
+          <p class="subscribe-description">$30 coupon for first shopping</p>
+        </div>
+        <form action="">
+          <input type="email" placeholder="Enter your email here...." />
+          <input class="btn-primary" type="submit" value="Subscribe" />
+        </form>
+      </section>
     </main>
   </body>
 </html>
