footer section added and created

--- a/index.html
+++ b/index.html
@@ -168,5 +168,22 @@
         </form>
       </section>
     </main>
+
+    <!-- footer section  -->
+
+    <footer>
+      <div class="footer-container">
+        <h1 class="footer-title">
+          <span class="footer-style">Flower</span>Shop
+        </h1>
+        <p class="footer-description">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+        <p class="footer-second-description">
+          @2020-2023, FlowerShop.com. All rights reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
