--- a/index.html
+++ b/index.html
@@ -78,15 +78,17 @@
         <div class="services">
           <div class="delibery-boy">
             <img src="./Flower Asset/Group 57.png" alt="" />
-            <p>Same Day Delivery. Click & Collect.</p>
+            <p class="service-description">
+              Same Day Delivery. Click & Collect.
+            </p>
           </div>
           <div class="fresh-flowers">
             <img src="./Flower Asset/Group 58.png" alt="" />
-            <p>Fresh Flowers. Local Growers.</p>
+            <p class="service-description">Fresh Flowers. Local Growers.</p>
           </div>
           <div class="free-support">
             <img src="./Flower Asset/Group 59.png" alt="" />
-            <p>24/7 Free Support.</p>
+            <p class="service-description">24/7 Free Support.</p>
           </div>
         </div>
       </section>
